# matrix-multiply

./: .gitignore  CMakeLists.txt  main.cpp
matrix/: matrix.cpp  matrix.h  matrix_cleancode.cpp  matrix_cleancode.h
parallel_matrix/: matrix_parallel.cpp  matrix_parallel.h
thread_openmp/: omp_atomic.cpp  omp_atomic.h  omp_base.cpp  omp_base.h  omp_critical.cpp  omp_critical.h  omp_parallel_1.cpp  omp_parallel_1.h  omp_parallel_2.cpp  omp_parallel_2.h  omp_reduction.cpp  omp_reduction.h
thread_standard/: thread.cpp  thread.h  thread_cleancode.cpp  thread_cleancode.h
